--- a/about.html
+++ b/about.html
@@ -14,27 +14,18 @@
 
 
 <!-- nav bar  -->
-    <nav>
-        <div class="logo">
-            <a  href="index.html">
-                <img class="img-responsive" src="/static/Empco-Lite-logo-07.png" alt="">
-                </a>
-        </div>
-
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="product_line.html">Product Line</a></li>
-            <li><a href="sister_companies.html">Divisions</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
+<nav>
+    <ul class="nav-menu">
+        <li class="logo"><a href="index.html"><span><img src="static/Empco-Lite-logo-07.png" style="width:100%; height:auto; max-width:300px;"></span></a></li>
+        <li class="item"><a href="index.html"><span>Home</span></a></li>
+        <li class="item"><a href="product_line.html"><span>Products</span></a></li>
+        <li class="item"><a href="divisions.html"><span>Divisions</span></a></li>
+        <li class="item"><a href="about.html"><span>About</span></a></li>
+        <li class="item"><a href="contact.html"><span>Contact</span></a></li>
+        <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+    </ul>
+</nav>
+<!-------------------- end nav  -------------------->
 
 
 
@@ -58,7 +49,7 @@
 
 
   
-        <div class="container">
+        <div class="container small-container">
         <h1 class="mission-title pinside40" >Mission Statement</h1>
         <p class="mission-statement pinside80">The mission of Elgin Molded Plastics, Empco-Lite, and AKT Corporation is to fully satisfy the
             expectations of our customers by producing the highest quality products on time, each and every
@@ -67,7 +58,7 @@
         </div>
  
 
-    <div class=" text--center align-center font">
+    <div class=" text--center small-container align-center font">
         <div class="pinside80">
             <h3 class="pinside40">See how it all comes together</h3>
             <a href="sister_companies.html" class="btn">Our Divisions</a>
@@ -174,7 +165,7 @@
     <div class="overlay-oldworld">
         <div class="product-line-container pinside40">
             <h1>Our Process</h1>
-            <h3>Empco-lite products are made right on our own turf, at Elgin Molded</h3>
+            <h3>Empco-lite products are made at our own local facility, Elgin Molded</h3>
             <a href="process.html" class="btn-2">Learn More</a>
         </div>
     </div>
@@ -259,7 +250,7 @@
                             <h3>Get a Quote</h3>
                         </div>
                         <div class="footer-text mb-25">
-                            <p>Providing services since the 1960's. Trust our expert sales team to provide to solutions you need.</p>
+                            <p>Providing services since the 1960's. Trust our expert sales team to provide the solutions you need.</p>
                         </div>
                             <div class="subscribe-form">
                                 <a href="contact.html"><i class="fab fa-telegram-plane"></i></a>
