--- a/standaloneflarelight.html
+++ b/standaloneflarelight.html
@@ -14,27 +14,18 @@
 
 
 <!-- nav bar  -->
-    <nav>
-        <div class="logo">
-            <a  href="index.html">
-                <img class="img-responsive" src="/static/Empco-Lite-logo-07.png" alt="">
-                </a>
-        </div>
-
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="product_line.html">Product Line</a></li>
-            <li><a href="sister_companies.html">Divisions</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
+<nav>
+    <ul class="nav-menu">
+        <li class="logo"><a href="index.html"><span><img src="static/Empco-Lite-logo-07.png" style="width:100%; height:auto; max-width:300px;"></span></a></li>
+        <li class="item"><a href="index.html"><span>Home</span></a></li>
+        <li class="item"><a href="product_line.html"><span>Products</span></a></li>
+        <li class="item"><a href="divisions.html"><span>Divisions</span></a></li>
+        <li class="item"><a href="about.html"><span>About</span></a></li>
+        <li class="item"><a href="contact.html"><span>Contact</span></a></li>
+        <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+    </ul>
+</nav>
+<!-------------------- end nav  -------------------->
 
 
 
@@ -170,7 +161,7 @@
                           <h3>Get a Quote</h3>
                       </div>
                       <div class="footer-text mb-25">
-                          <p>Providing services since the 1960's. Trust our expert sales team to provide to solutions you need.</p>
+                          <p>Providing services since the 1960's. Trust our expert sales team to provide the solutions you need.</p>
                       </div>
                           <div class="subscribe-form">
                               <a href="contact.html"><i class="fab fa-telegram-plane"></i></a>
