--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 
 
     <!-- MISSION STATEMENT -->
-        
             <div class="row">
                 <div class="col-md-8 col-sm-12">
                     <div class="text mt-5 mb-5">
@@ -210,7 +209,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-12 d-flex flex-row align-items-center justify-items-center">
-                <h4 class="p-5" style="max-width: 1000px">AKT Corporation is honored to be recognized as an industry leader in Safety, Innovation, and Leadership. We are proud members of National Highway Safety Administration, American Traffic Safety Services Association, Flasher Barricade Association, and the Transportation Safety Equipment Institute.  </p>
+                <h4 class="p-2" style="max-width: 1000px">Empco-Lite is honored to be recognized as an industry leader in Safety, Innovation, and Leadership. We are proud members of National Highway Safety Administration, American Traffic Safety Services Association, Flasher Barricade Association, and the Transportation Safety Equipment Institute.  </p>
             </div>
         </div>
         <div class="row">
