--- a/about.html
+++ b/about.html
@@ -154,11 +154,12 @@
 </div>
 
 
+</div>
 
 
 <div class="big-image-oldworld">
     <div class="overlay-oldworld">
-        <div class="product-line-container">
+        <div class="text--center">
             <h1>Our Process</h1>
             <h3>Empco-lite products are made at our own local facility, Elgin Molded</h3>
             <a href="process.html" class="btn-2">Learn More</a>
@@ -168,7 +169,7 @@
 
 
 
-</div>
+
   
 
 
